<resources>
    <string name="app_name">ChartPH</string>
    <string name="Logo_desc">Logo_desc</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_enter_the_otp_sent_to_your_email">Please enter the OTP sent to your email</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
</resources>