<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_the_otp_sent_to_your_email" />

    <EditText
        android:id="@+id/otp_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_otp"
        android:inputType="number"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/verify_otp_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_otp"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>
